--- a/server.properties
+++ b/server.properties
@@ -1,36 +1,28 @@
 #Minecraft server properties
-#Mon Jul 10 22:16:56 CDT 2017
+#Thu Jul 13 22:46:49 CDT 2017
 generator-settings=
-op-permission-level=4
 allow-nether=true
 level-name=world
 enable-query=false
 allow-flight=false
-prevent-proxy-connections=false
 server-port=25565
-max-world-size=29999984
 level-type=DEFAULT
 enable-rcon=false
-force-gamemode=false
 level-seed=
+force-gamemode=false
 server-ip=
-network-compression-threshold=256
 max-build-height=256
 spawn-npcs=true
 white-list=false
 spawn-animals=true
 snooper-enabled=true
 hardcore=false
-resource-pack-sha1=
+texture-pack=
 online-mode=true
-resource-pack=
 pvp=true
 difficulty=1
-enable-command-block=false
-player-idle-timeout=0
 gamemode=0
-max-players=20
-max-tick-time=60000
+max-players=10
 spawn-monsters=true
 generate-structures=true
 view-distance=10
